Fee Payment - initial commit

--- a/src/main/resources/FeePayment/FeePaymentMenu.fxml
+++ b/src/main/resources/FeePayment/FeePaymentMenu.fxml
@@ -6,7 +6,7 @@
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.FeePaymentMenuController">
    <children>
-      <Button fx:id="payBtn" layoutX="274.0" layoutY="284.0" mnemonicParsing="false" onMouseClicked="#PayButtonClicked" text="Button" />
+      <Button fx:id="payBtn" layoutX="275.0" layoutY="247.0" mnemonicParsing="false" onMouseClicked="#payBtnClicked" text="Pay" />
       <TextField fx:id="feePaymentAmount" layoutX="226.0" layoutY="141.0" promptText="Amount to be Paid" />
       <TextField fx:id="studentIdField" layoutX="226.0" layoutY="188.0" promptText="Student ID" />
    </children>
