--- a/src/main/resources/Main Menu/MainMenu.fxml
+++ b/src/main/resources/Main Menu/MainMenu.fxml
@@ -7,10 +7,13 @@
 <?import javafx.scene.layout.BorderPane?>
 
 <BorderPane fx:id="borderpane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="780.0" prefWidth="1200.0" style="-fx-background-color: #474c5f; -fx-background-radius: 6;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.MainMenuController">
+   <center>
+      <AnchorPane fx:id="centerAnchorpane" prefHeight="696.0" prefWidth="946.0" style="-fx-background-color: white; -fx-background-radius: 30;" BorderPane.alignment="CENTER" />
+   </center>
    <left>
       <AnchorPane prefHeight="696.0" prefWidth="82.0" BorderPane.alignment="CENTER">
          <children>
-            <Button fx:id="homeBtn" contentDisplay="GRAPHIC_ONLY" layoutX="15.0" layoutY="181.0" mnemonicParsing="false" onAction="#HomeBtnPressed" prefHeight="51.0" prefWidth="52.0" stylesheets="@HomeButton.css" text="Button">
+            <Button fx:id="homeBtn" contentDisplay="GRAPHIC_ONLY" layoutX="39.0" layoutY="180.0" mnemonicParsing="false" onAction="#HomeBtnPressed" prefHeight="51.0" prefWidth="52.0" stylesheets="@HomeButton.css" text="Button">
                <graphic>
                   <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -19,7 +22,7 @@
                   </ImageView>
                </graphic>
             </Button>
-            <Button fx:id="studentMenuBtn" contentDisplay="GRAPHIC_ONLY" layoutX="15.0" layoutY="247.0" mnemonicParsing="false" onAction="#studentMenuBtnPressed" prefHeight="51.0" prefWidth="52.0" stylesheets="@StaticButton.css" text="Button">
+            <Button fx:id="studentMenuBtn" contentDisplay="GRAPHIC_ONLY" layoutX="39.0" layoutY="261.0" mnemonicParsing="false" onAction="#studentMenuBtnPressed" prefHeight="51.0" prefWidth="52.0" stylesheets="@StaticButton.css" text="Button">
                <graphic>
                   <ImageView fitHeight="30.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -28,19 +31,12 @@
                   </ImageView>
                </graphic>
             </Button>
+            <ImageView fitHeight="127.0" fitWidth="133.0" layoutX="2.0" layoutY="23.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@logo.png" />
+               </image>
+            </ImageView>
          </children>
       </AnchorPane>
    </left>
-   <center>
-      <AnchorPane fx:id="centerAnchorpane" prefHeight="696.0" prefWidth="946.0" style="-fx-background-color: white; -fx-background-radius: 30;" BorderPane.alignment="CENTER" />
-   </center>
-   <right>
-      <AnchorPane prefHeight="696.0" prefWidth="51.0" BorderPane.alignment="CENTER" />
-   </right>
-   <bottom>
-      <AnchorPane prefHeight="45.0" prefWidth="1200.0" BorderPane.alignment="CENTER" />
-   </bottom>
-   <top>
-      <AnchorPane prefHeight="39.0" prefWidth="1200.0" BorderPane.alignment="CENTER" />
-   </top>
 </BorderPane>
