--- a/src/main/resources/Main Menu/StaticButton.css
+++ b/src/main/resources/Main Menu/StaticButton.css
@@ -1,16 +1,16 @@
 .button {
-    -fx-background-color: #989aad;
+    -fx-background-color: #38B6FF;
 
 }
 
 .button:hover {
-    -fx-background-color: #bec4dc;
+    -fx-background-color: #5294FF;
 
 
 }
 
 .button:pressed{
-    -fx-background-color: #bec4dc;
+    -fx-background-color: #5294FF;
     -fx-opacity: 0.8;
 
 }
