--- a/src/main/resources/ViewResults/ViewResults.fxml
+++ b/src/main/resources/ViewResults/ViewResults.fxml
@@ -1,5 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.FeePaymentMenuController" />
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.ViewResultsController">
+   <children>
+      <ListView fx:id="studentList" layoutX="131.0" layoutY="117.0" prefHeight="257.0" prefWidth="103.0" />
+      <ListView fx:id="subjectList" layoutX="245.0" layoutY="117.0" prefHeight="257.0" prefWidth="221.0" />
+      <ListView fx:id="percentageList" layoutX="475.0" layoutY="117.0" prefHeight="257.0" prefWidth="103.0" />
+      <Label layoutX="162.0" layoutY="90.0" text="Student" />
+      <Label layoutX="336.0" layoutY="90.0" text="Subject" />
+      <Label layoutX="497.0" layoutY="90.0" text="Percentage" />
+   </children>
+</AnchorPane>
