--- a/src/main/resources/AdmissionScreen/AdmissionScreen.fxml
+++ b/src/main/resources/AdmissionScreen/AdmissionScreen.fxml
@@ -2,20 +2,32 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" styleClass="anchorpane" stylesheets="@../centerPane.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.AdmissionScreenController">
    <children>
-      <Button fx:id="TestButton" layoutX="549.0" layoutY="487.0" mnemonicParsing="false" onMouseClicked="#OnTestButtonClicked" text="Admit Student" />
-      <TextField fx:id="studentName" layoutX="304.0" layoutY="220.0" promptText="Student Name" />
-      <TextField fx:id="guardianName" layoutX="304.0" layoutY="252.0" promptText="Guardian Name" />
-      <TextField fx:id="studentCNIC" layoutX="304.0" layoutY="286.0" promptText="Student CNIC" />
-      <TextField fx:id="studentAge" layoutX="304.0" layoutY="319.0" promptText="Student Age" />
-      <TextField fx:id="studentAddress" layoutX="304.0" layoutY="355.0" promptText="Student Address" />
-      <TextField fx:id="studentClass" layoutX="304.0" layoutY="390.0" promptText="Student Class" />
-      <TextField fx:id="studentScholarship" layoutX="304.0" layoutY="424.0" promptText="Student Scholarship" />
-      <TextField fx:id="studentPhoneNumber" layoutX="304.0" layoutY="461.0" promptText="Phone Number" />
-      <Text fx:id="topText" layoutX="304.0" layoutY="179.0" strokeType="OUTSIDE" strokeWidth="0.0" text="STUDENT ADMISSION FORM" />
+      <ImageView fitHeight="630.0" fitWidth="999.0" layoutY="66.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@StudentAdmission.png" />
+         </image>
+      </ImageView>
+      <TextField fx:id="studentName" layoutX="139.0" layoutY="220.0" promptText="Student Name" />
+      <TextField fx:id="guardianName" layoutX="139.0" layoutY="252.0" promptText="Guardian Name" />
+      <TextField fx:id="studentCNIC" layoutX="139.0" layoutY="286.0" promptText="Student CNIC" />
+      <TextField fx:id="studentAge" layoutX="139.0" layoutY="319.0" promptText="Student Age" />
+      <TextField fx:id="studentAddress" layoutX="139.0" layoutY="355.0" promptText="Student Address" />
+      <TextField fx:id="studentClass" layoutX="139.0" layoutY="390.0" promptText="Student Class" />
+      <TextField fx:id="studentScholarship" layoutX="139.0" layoutY="424.0" promptText="Student Scholarship" />
+      <TextField fx:id="studentPhoneNumber" layoutX="139.0" layoutY="461.0" promptText="Phone Number" />
+      <Text fx:id="topText" layoutX="304.0" layoutY="179.0" strokeType="OUTSIDE" strokeWidth="0.0" />
+      <Button fx:id="TestButton" layoutX="148.0" layoutY="509.0" mnemonicParsing="false" onMouseClicked="#OnTestButtonClicked" prefHeight="30.0" prefWidth="131.0" style="-fx-background-color: rgb(56, 182, 255); -fx-background-radius: 15px;" text="Admit Student" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
