--- a/src/main/resources/FeePayment/FeePaymentMenu.fxml
+++ b/src/main/resources/FeePayment/FeePaymentMenu.fxml
@@ -2,12 +2,24 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.FeePaymentMenuController">
    <children>
-      <Button fx:id="payBtn" layoutX="275.0" layoutY="247.0" mnemonicParsing="false" onMouseClicked="#payBtnClicked" text="Pay" />
-      <TextField fx:id="feePaymentAmount" layoutX="226.0" layoutY="141.0" promptText="Amount to be Paid" />
-      <TextField fx:id="studentIdField" layoutX="226.0" layoutY="188.0" promptText="Student ID" />
+      <ImageView fitHeight="630.0" fitWidth="999.0" layoutY="66.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@ProcessPayment.png" />
+         </image>
+      </ImageView>
+      <TextField fx:id="feePaymentAmount" layoutX="144.0" layoutY="272.0" promptText="Amount to be Paid" />
+      <TextField fx:id="studentIdField" layoutX="144.0" layoutY="319.0" promptText="Student ID" />
+      <Button fx:id="payBtn" layoutX="153.0" layoutY="388.0" mnemonicParsing="false" onMouseClicked="#payBtnClicked" prefHeight="30.0" prefWidth="131.0" style="-fx-background-color: rgb(56, 182, 255); -fx-background-radius: 15px;" text="Process Payment" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
