--- a/src/main/resources/IDCardScreen/IDCardScreen.fxml
+++ b/src/main/resources/IDCardScreen/IDCardScreen.fxml
@@ -3,26 +3,40 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Rectangle?>
-<?import javafx.scene.text.Text?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" styleClass="anchorpane" stylesheets="@../centerPane.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.GenerateIDCardController">
    <children>
-      <Button fx:id="generateBtn" layoutX="324.0" layoutY="275.0" mnemonicParsing="false" onAction="#generateBtnClicked" onMouseClicked="#generateBtnClicked" text="Generate ID Card" />
-      <Text fx:id="topText" layoutX="336.0" layoutY="184.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Student ID Card" />
-      <TextField fx:id="IDEnteredField" layoutX="325.0" layoutY="221.0" promptText="Student ID" />
-      <Rectangle fx:id="IDCard" arcHeight="5.0" arcWidth="5.0" fill="#caddee" height="200.0" layoutX="324.0" layoutY="316.0" stroke="BLACK" strokeType="INSIDE" visible="false" width="363.0" />
-      <Label fx:id="IDtag" layoutX="336.0" layoutY="331.0" text="Student ID: " visible="false" />
-      <Label fx:id="studentIDField" layoutX="406.0" layoutY="331.0" prefHeight="17.0" prefWidth="39.0" text="ID" visible="false" />
-      <Label fx:id="nameTag" layoutX="506.0" layoutY="331.0" text="Student Name: " visible="false" />
-      <Label fx:id="nameField" layoutX="596.0" layoutY="331.0" text="name" visible="false" />
-      <Label fx:id="addressTag" layoutX="336.0" layoutY="382.0" text="Student Address: " visible="false" />
-      <Label fx:id="contactTag" layoutX="336.0" layoutY="429.0" text="Student Contact: " visible="false" />
-      <Label fx:id="addressField" layoutX="436.0" layoutY="382.0" text="address" visible="false" />
-      <Label fx:id="contactField" layoutX="443.0" layoutY="429.0" text="contact" visible="false" />
-      <Label fx:id="invalidIDLabel" layoutX="325.0" layoutY="316.0" prefHeight="17.0" prefWidth="108.0" text="invalidIDLabel" textFill="RED" visible="false" />
-      <Button fx:id="downloadBtn" layoutX="452.0" layoutY="577.0" mnemonicParsing="false" onMouseClicked="#downloadBtnClicked" text="Download as PDF" visible="false" />
-      <TextField fx:id="cardPathField" layoutX="325.0" layoutY="530.0" prefHeight="25.0" prefWidth="363.0" promptText="Path to save ID card" visible="false" />
+      <ImageView fitHeight="630.0" fitWidth="999.0" layoutY="66.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@StudentDocument.png" />
+         </image>
+      </ImageView>
+      <TextField fx:id="IDEnteredField" layoutX="145.0" layoutY="188.0" promptText="Student ID" />
+      <Rectangle fx:id="IDCard" arcHeight="5.0" arcWidth="5.0" fill="#caddee" height="200.0" layoutX="38.0" layoutY="308.0" stroke="BLACK" strokeType="INSIDE" visible="false" width="363.0" />
+      <Label fx:id="IDtag" layoutX="50.0" layoutY="323.0" text="Student ID: " visible="false" />
+      <Label fx:id="studentIDField" layoutX="120.0" layoutY="323.0" prefHeight="17.0" prefWidth="39.0" text="ID" visible="false" />
+      <Label fx:id="nameTag" layoutX="220.0" layoutY="323.0" text="Student Name: " visible="false" />
+      <Label fx:id="nameField" layoutX="310.0" layoutY="323.0" text="name" visible="false" />
+      <Label fx:id="addressTag" layoutX="50.0" layoutY="374.0" text="Student Address: " visible="false" />
+      <Label fx:id="contactTag" layoutX="50.0" layoutY="421.0" text="Student Contact: " visible="false" />
+      <Label fx:id="addressField" layoutX="150.0" layoutY="374.0" text="address" visible="false" />
+      <Label fx:id="contactField" layoutX="157.0" layoutY="421.0" text="contact" visible="false" />
+      <Label fx:id="invalidIDLabel" layoutX="39.0" layoutY="308.0" prefHeight="17.0" prefWidth="108.0" text="invalidIDLabel" textFill="RED" visible="false" />
+      <TextField fx:id="cardPathField" layoutX="39.0" layoutY="522.0" prefHeight="25.0" prefWidth="363.0" promptText="Path to save ID card" visible="false" />
+      <Button fx:id="generateBtn" layoutX="134.0" layoutY="244.0" mnemonicParsing="false" onAction="#generateBtnClicked" prefHeight="30.0" prefWidth="171.0" style="-fx-background-color: rgb(56, 182, 255); -fx-background-radius: 15px;" text="Generate Document" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font>
+      </Button>
+      <Button fx:id="downloadBtn" layoutX="134.0" layoutY="564.0" mnemonicParsing="false" onMouseClicked="#downloadBtnClicked" prefHeight="30.0" prefWidth="171.0" style="-fx-background-color: rgb(56, 182, 255); -fx-background-radius: 15px;" text="Download as PDF" textFill="WHITE" visible="false">
+         <font>
+            <Font name="System Bold" size="14.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
