--- a/src/main/resources/Student Menu/StudentMenu.fxml
+++ b/src/main/resources/Student Menu/StudentMenu.fxml
@@ -1,15 +1,42 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" styleClass="anchorpane" stylesheets="@../centerPane.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.StudentMenuController">
    <children>
-      <Button fx:id="admitStudentBtn" layoutX="137.0" layoutY="229.0" mnemonicParsing="false" onAction="#admitStudentBtnPressed" text="Admission of student" />
-      <Button fx:id="genIdCardBtn" layoutX="137.0" layoutY="275.0" mnemonicParsing="false" onAction="#genIdCardBtnPressed" text="Generate Id Card" />
-      <Button fx:id="payFeeBtn" layoutX="137.0" layoutY="323.0" mnemonicParsing="false" onAction="#payFeeBtnPressed" text="Pay Fee" />
-      <Button fx:id="admitStaffBtn" layoutX="137.0" layoutY="377.0" mnemonicParsing="false" onAction="#admitStaffBtnPressed" text="Admit Staff" />
-      <Button fx:id="updateMarksBtn" layoutX="140.0" layoutY="421.0" mnemonicParsing="false" onAction="#updateMarksBtnPressed" text="Update Exam Marks" />
-      <Button fx:id="viewResultsBtn" layoutX="133.0" layoutY="463.0" mnemonicParsing="false" onAction="#viewResultsBtnPressed" text="View Results" />
+      <ImageView fitHeight="630.0" fitWidth="999.0" layoutY="66.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@StudentMenu.png" />
+         </image>
+      </ImageView>
+      <Button fx:id="admitStudentBtn" layoutX="133.0" layoutY="198.0" mnemonicParsing="false" onAction="#admitStudentBtnPressed" prefHeight="39.0" prefWidth="159.0" style="-fx-background-color: rgb(56, 182, 255); -fx-background-radius: 15px;" text="Admission of student" textFill="WHITE">
+         <font>
+            <Font size="14.0" />
+         </font></Button>
+      <Button fx:id="genIdCardBtn" layoutX="133.0" layoutY="254.0" mnemonicParsing="false" onAction="#genIdCardBtnPressed" prefHeight="39.0" prefWidth="159.0" style="-fx-background-color: rgb(56, 182, 255); -fx-background-radius: 15px;" text="Generate Id Card" textFill="WHITE">
+         <font>
+            <Font size="14.0" />
+         </font></Button>
+      <Button fx:id="payFeeBtn" layoutX="133.0" layoutY="312.0" mnemonicParsing="false" onAction="#payFeeBtnPressed" prefHeight="39.0" prefWidth="159.0" style="-fx-background-color: rgb(56, 182, 255); -fx-background-radius: 15px;" text="Pay Fee" textFill="WHITE">
+         <font>
+            <Font size="14.0" />
+         </font></Button>
+      <Button fx:id="admitStaffBtn" layoutX="133.0" layoutY="371.0" mnemonicParsing="false" onAction="#admitStaffBtnPressed" prefHeight="39.0" prefWidth="159.0" style="-fx-background-color: rgb(56, 182, 255); -fx-background-radius: 15px;" text="Admit Staff" textFill="WHITE">
+         <font>
+            <Font size="14.0" />
+         </font></Button>
+      <Button fx:id="updateMarksBtn" layoutX="133.0" layoutY="426.0" mnemonicParsing="false" onAction="#updateMarksBtnPressed" prefHeight="39.0" prefWidth="159.0" style="-fx-background-color: rgb(56, 182, 255); -fx-background-radius: 15px;" text="Update Exam Marks" textFill="WHITE">
+         <font>
+            <Font size="14.0" />
+         </font></Button>
+      <Button fx:id="viewResultsBtn" layoutX="133.0" layoutY="480.0" mnemonicParsing="false" onAction="#viewResultsBtnPressed" prefHeight="39.0" prefWidth="159.0" style="-fx-background-color: rgb(56, 182, 255); -fx-background-radius: 15px;" text="View Results" textFill="WHITE">
+         <font>
+            <Font size="14.0" />
+         </font>
+      </Button>
    </children>
 </AnchorPane>
