--- a/src/main/resources/FeePayment/FeePaymentMenu.fxml
+++ b/src/main/resources/FeePayment/FeePaymentMenu.fxml
@@ -6,6 +6,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.FeePaymentMenuController">
    <children>
@@ -21,5 +22,6 @@
             <Font name="System Bold" size="14.0" />
          </font>
       </Button>
+      <Text fx:id="payAlert" fill="WHITE" layoutX="153.0" layoutY="370.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="74.13671875" />
    </children>
 </AnchorPane>
