--- a/src/main/resources/UpdateMarks/UpdateMarks.fxml
+++ b/src/main/resources/UpdateMarks/UpdateMarks.fxml
@@ -1,31 +1,32 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" styleClass="anchorpane" stylesheets="@../centerPane.css" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.UpdateMarksController">
    <children>
-      <TextField fx:id="namefield" layoutX="394.0" layoutY="250.0" promptText="Student Name" />
-      <TextField fx:id="percentagefield" layoutX="394.0" layoutY="299.0" promptText="Percentage Obtained" />
-      <PasswordField fx:id="subjectfield" layoutX="394.0" layoutY="344.0" promptText="Subject Name" />
-      <Button fx:id="updatebtn" layoutX="419.0" layoutY="425.0" mnemonicParsing="false" onAction="#updateBtnClicked" prefHeight="30.0" prefWidth="100.0" style="-fx-background-color: rgb(85, 104, 232); -fx-background-radius: 15px;" text="Update" textFill="WHITE">
+      <ImageView fitHeight="630.0" fitWidth="999.0" layoutY="66.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@UpdateMarks.png" />
+         </image>
+      </ImageView>
+      <TextField fx:id="namefield" layoutX="137.0" layoutY="282.0" promptText="Student Name" />
+      <TextField fx:id="percentagefield" layoutX="137.0" layoutY="331.0" promptText="Percentage Obtained" />
+      <Button fx:id="updatebtn" layoutX="162.0" layoutY="457.0" mnemonicParsing="false" onAction="#updateBtnClicked" prefHeight="30.0" prefWidth="100.0" style="-fx-background-color: rgb(56, 182, 255); -fx-background-radius: 15px;" text="Update" textFill="WHITE">
          <font>
             <Font name="System Bold" size="14.0" />
          </font>
       </Button>
-      <Text fx:id="promptField1" fill="#5669e8" layoutX="394.0" layoutY="207.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Enter Details:" wrappingWidth="191.13671875">
-         <font>
-            <Font name="HP Simplified Hans Light" size="21.0" />
-         </font>
-      </Text>
-      <Text fx:id="promptField" fill="#5669e8" layoutX="385.0" layoutY="408.0" strokeType="OUTSIDE" strokeWidth="0.0" text=" " wrappingWidth="191.13671875">
+      <Text fx:id="promptField" fill="WHITE" layoutX="128.0" layoutY="440.0" strokeType="OUTSIDE" strokeWidth="0.0" text=" " wrappingWidth="191.13671875">
          <font>
             <Font name="HP Simplified Hans Light" size="15.0" />
          </font>
       </Text>
+      <TextField fx:id="subjectfield" layoutX="137.0" layoutY="375.0" promptText="Subject Name" />
    </children>
 </AnchorPane>
