--- a/src/main/resources/ViewResults/ViewResults.fxml
+++ b/src/main/resources/ViewResults/ViewResults.fxml
@@ -2,15 +2,32 @@
 
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.ViewResultsController">
    <children>
-      <ListView fx:id="studentList" layoutX="131.0" layoutY="117.0" prefHeight="257.0" prefWidth="103.0" />
-      <ListView fx:id="subjectList" layoutX="245.0" layoutY="117.0" prefHeight="257.0" prefWidth="221.0" />
-      <ListView fx:id="percentageList" layoutX="475.0" layoutY="117.0" prefHeight="257.0" prefWidth="103.0" />
-      <Label layoutX="162.0" layoutY="90.0" text="Student" />
-      <Label layoutX="336.0" layoutY="90.0" text="Subject" />
-      <Label layoutX="497.0" layoutY="90.0" text="Percentage" />
+      <ImageView fitHeight="630.0" fitWidth="999.0" layoutY="66.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@View%20Results.png" />
+         </image>
+      </ImageView>
+      <ListView fx:id="studentList" layoutX="155.0" layoutY="311.0" prefHeight="257.0" prefWidth="170.0" style="-fx-background-radius: 15px;" />
+      <ListView fx:id="subjectList" layoutX="336.0" layoutY="311.0" prefHeight="257.0" prefWidth="221.0" style="-fx-background-radius: 15px;" />
+      <ListView fx:id="percentageList" layoutX="566.0" layoutY="311.0" prefHeight="257.0" prefWidth="170.0" style="-fx-background-radius: 15px;" />
+      <Label layoutX="216.0" layoutY="279.0" text="Student" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="18.0" />
+         </font></Label>
+      <Label layoutX="415.0" layoutY="279.0" text="Subject" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="18.0" />
+         </font></Label>
+      <Label layoutX="595.0" layoutY="279.0" text="Percentage" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="18.0" />
+         </font></Label>
    </children>
 </AnchorPane>
